FireFox/Safari/Chrome/Opera will work fine as for HTML5 supported version.
It's hard to check all versions above browsers as you know. I hope you understand.

=================================
Change Log
=================================

Latest changes might exist on the GitHub repository. Please check https://github.com/msyk/INTER-Mediator.

Ver.4.2 (in development)

Ver.4.1 (2014/2/7)
- HTML5's user defined attributes are supported. Refer the alternative former style. CLASS-IM[] style is still supported.
        class="IM[...]" -> data-im="...",
        class="_im_repeater" -> data-im-control="repeater"
        class="_im_enclosure" -> data-im-control="enclosure"
        class="_im_ignore_enc_rep" -> data-im-control="ignore_enc_rep"
        class="_im_for_noresult_" -> data-im-control="noresult"
        class="IM_WIDGET[...]" -> data-im-widget="..."
        name="IM[survey@q4]" -> data-im-group="...."
- Database class and DB_Proxy support requireUpdatedRecord($value) and updatedRecord() method.
  For DB_PDO class, call the requireUpdatedRecord(true) and updateRecord() returns updated and newly created record.
  For DB_FileMaker_FX class, just call updateRecord() and it returns updated and newly created record.
- Delete buttons have the class "IM_Button_Delete".
- Insert buttons have the class "IM_Button_Insert" instead of "_im_insert_button".
- Taking care in case of Accept-Language: header wasn't set (i.e. nothing defined language in browser).
- Add the meta tag with "X-UA-Compatible" to all samples, it forces Internet Explorer to
  work as its native document mode.
- TestDB.fmp12 is updated and sample_schema_filemaker.php is added in "dist-docs" directory.
- The Defnition File Editor starts with reduced items and can show all items by clicking button.
- [BUG FIX] Fix the issue of the Native Authentication (version 4.0 only).
- [BUG FIX] Fix the issue of GenerateJSCode.php to work with PHP 5.2 again (version 4.0 only).